feat: refactor basic.ts to use createResponse function and improve output handling
chore: update package.json scripts for better development workflow

feat: implement format and check-format scripts for code style enforcement

docs: add AGENTS.md for repository guidelines and project structure

fix: enhance lmstudio.ts to support maxOutputTokens in createResponse

test: add unit test for extractOutputText function in lmstudio.test.ts

chore: add .npmrc to set npm registry to npmmirror

--- a/package.json
+++ b/package.json
@@ -2,10 +2,15 @@
   "name": "llm-gate",
   "version": "1.0.0",
   "description": "",
+  "type": "module",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "tsx src/basic.ts"
+    "check": "pnpm format:check && pnpm typecheck && pnpm test",
+    "dev": "tsx src/basic.ts",
+    "format": "node scripts/format.mjs",
+    "format:check": "node scripts/check-format.mjs",
+    "test": "tsx tests/lmstudio.test.ts",
+    "typecheck": "tsc --noEmit"
   },
   "keywords": [],
   "author": "",
