feat: enhance structured output handling and testing
- Added structured output schema and parsing logic in `structured-output.ts`.
- Updated `basic.ts` to utilize structured prompts and handle structured output.
- Implemented tests for structured output parsing in `structured-output.test.ts`.
- Refactored existing tests to use Vitest framework in `lmstudio.test.ts`.
- Created separate TypeScript configuration for tests in `tsconfig.test.json`.
- Configured Vitest for testing environment and coverage reporting in `vitest.config.ts`.

--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "dev": "tsx src/basic.ts",
     "format": "node scripts/format.mjs",
     "format:check": "node scripts/check-format.mjs",
-    "test": "tsx tests/lmstudio.test.ts",
-    "typecheck": "tsc --noEmit"
+    "test": "vitest run",
+    "typecheck": "tsc --noEmit",
+    "test:watch": "vitest"
   },
   "keywords": [],
   "author": "",
@@ -19,6 +20,8 @@
   "devDependencies": {
     "@types/node": "^25.1.0",
     "tsx": "^4.21.0",
-    "typescript": "^5.9.3"
+    "typescript": "^5.9.3",
+    "vitest": "^0.34.0",
+    "zod": "^3.22.4"
   }
 }
