--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "main": "index.js",
   "scripts": {
     "check": "pnpm format:check && pnpm typecheck && pnpm test",
-    "dev": "tsx src/basic.ts",
+    "dev": "tsx src/index.ts",
+    "basic": "tsx src/basic.ts",
     "format": "prettier --write \"src/**/*.{ts,tsx}\" \"tests/**/*.ts\" \"docs/**/*.md\" \"AGENTS.md\" \"README.md\" \"package.json\" \"tsconfig*.json\"",
     "format:check": "prettier --check \"src/**/*.{ts,tsx}\" \"tests/**/*.ts\" \"docs/**/*.md\" \"AGENTS.md\" \"README.md\" \"package.json\" \"tsconfig*.json\"",
     "test": "vitest run",
@@ -19,6 +20,8 @@
   "packageManager": "pnpm@10.20.0",
   "devDependencies": {
     "@types/node": "^25.1.0",
+    "discord.js": "^14.25.1",
+    "dotenv": "^17.2.3",
     "prettier": "^3.8.1",
     "tsx": "^4.21.0",
     "typescript": "^5.9.3",
