--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "check": "pnpm format:check && pnpm typecheck && pnpm test",
     "dev": "tsx src/index.ts",
-    "basic": "tsx src/basic.ts",
+    "sample": "tsx src/basic-sample.ts",
     "format": "prettier --write \"src/**/*.{ts,tsx}\" \"tests/**/*.ts\" \"docs/**/*.md\" \"AGENTS.md\" \"README.md\" \"package.json\" \"tsconfig*.json\"",
     "format:check": "prettier --check \"src/**/*.{ts,tsx}\" \"tests/**/*.ts\" \"docs/**/*.md\" \"AGENTS.md\" \"README.md\" \"package.json\" \"tsconfig*.json\"",
     "test": "vitest run",
