feat: Implement Discord thread context rehydration and web research tool
- Add thread context rehydration for Discord bot interactions, allowing for conversation continuity even after model reloads.
- Create `buildThreadContext` function to manage message history and format it for LLM responses.
- Introduce `web_research_digest` tool using Brave Web Search API for web research, enabling the bot to fetch and summarize web content.
- Implement necessary data models and utility functions for message handling and transcript formatting.
- Add tests for thread context building, message handling logic, and transcript formatting to ensure reliability.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,8 @@
     "types": ["node"],
 
     "strict": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
     "noUncheckedIndexedAccess": true,
     "exactOptionalPropertyTypes": true,
 
