--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
   "license": "ISC",
   "packageManager": "pnpm@10.20.0",
   "devDependencies": {
+    "@mozilla/readability": "^0.6.0",
     "@types/node": "^25.1.0",
     "discord.js": "^14.25.1",
     "dotenv": "^17.2.3",
+    "jsdom": "^28.0.0",
     "prettier": "^3.8.1",
     "tsx": "^4.21.0",
     "typescript": "^5.9.3",
