feat: implement message handling and tool integration for Discord bot
- Add message create handler to process incoming messages and respond appropriately.
- Introduce message create policy to determine handling logic based on message context.
- Implement runtime service for managing message replies and typing indicators.
- Create utility functions for message processing, including transcript building and reply formatting.
- Add tool loop policy to manage tool usage for current time and web research queries.
- Enhance tests for message handling, tool integration, and utility functions to ensure reliability.
- Update TypeScript configuration for better module resolution.

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "format": "prettier --write \"src/**/*.{ts,tsx}\" \"tests/**/*.ts\" \"docs/**/*.md\" \"AGENTS.md\" \"README.md\" \"package.json\" \"tsconfig*.json\"",
     "format:check": "prettier --check \"src/**/*.{ts,tsx}\" \"tests/**/*.ts\" \"docs/**/*.md\" \"AGENTS.md\" \"README.md\" \"package.json\" \"tsconfig*.json\"",
     "test": "vitest run",
-    "typecheck": "tsc --noEmit",
+    "typecheck": "tsc --noEmit && tsc -p tsconfig.test.json --noEmit",
     "test:watch": "vitest"
   },
   "keywords": [],
